# systemd-tray-kde

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  release.sh
